--- a/index.html
+++ b/index.html
@@ -8,6 +8,46 @@
     <title>Document</title>
 </head>
 <body>
-    <p>hello world</p>
+    <aside>
+        <h1>Odin</h1>
+    </aside>
+    <section>
+        <p>This is not a real online service! You know you need something like this in your life
+            to help you realize your deepest dreams. <span>Sign up <em>now</em> to get started</span>
+        </p>
+    </section>
+    <section>
+        <form action="some-fake-url">
+            <legend>Let's do this!</legend>
+            <ul class="left">
+                <li>
+                    <label for="firstName">FIRST NAME</label>
+                    <input type="text" name="first_name" id="firstName" required>
+                </li>
+                <li>
+                    <label for="mail">EMAIL</label>
+                    <input type="email" name="email" id="mail" required>
+                </li>
+                <li>
+                    <label for="pwd">PASSWORD</label>
+                    <input type="password" name="password" id="pwd" required>
+                </li>
+            </ul>
+            <ul class="right">
+                <li>
+                    <label for="lastName">LAST NAME</label>
+                    <input type="text" name="last_name" id="lastName">
+                </li>
+                <li>
+                    <label for="phone">PHONE NUMBER</label>
+                    <input type="tel" name="telephone" id="phone">
+                </li>
+                <li>
+                    <label for="cpwd">CONFIRM PASSWORD</label>
+                    <input type="password" name="confirm_password" id="cpwd">
+                </li>
+            </ul>
+        </form>
+    </section>
 </body>
-</html>
+</html>`
