a few css changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             This is not a real online service! You know you need something like
             this in your life to help you realize your deepest dreams.
           </p>
-          <span>Sign up <em>now</em> to get started</span>
+          <span>Sign up <em>now</em> to get started!</span>
         </section>
         <form action="some-fake-url" class="formContainer">
           <legend>Let's do this!</legend>
@@ -51,8 +51,8 @@
             </li>
           </ul>
         </form>
-        <section class="btn">
-          <button type="submit">Create Account</button>
+        <section class="bottom">
+          <button type="submit" class="btn">Create Account</button>
           <p>Already have an account? <a href="#">Log In!</a></p>
         </section>
       </section>
