--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <body>
     <main class="container">
       <aside>
-        <h1>Odin</h1>
+        <div class="title">
+          <img src="images/odin-lined.png" alt="odin" />
+          <h1>Thunder Baseball!</h1>
+        </div>
       </aside>
       <section class="userData">
         <section class="contentText">
@@ -20,12 +23,18 @@
           </p>
           <span>Sign up <em>now</em> to get started!</span>
         </section>
-        <form action="some-fake-url" class="formContainer">
+        <form action="some-fake-url" class="formContainer" id="myForm">
           <legend>Let's do this!</legend>
           <ul class="left">
             <li>
               <label for="firstName">FIRST NAME</label>
-              <input type="text" name="first_name" id="firstName" required />
+              <input
+                type="text"
+                name="first_name"
+                id="firstName"
+                required
+                title="Please enter first name"
+              />
             </li>
             <li>
               <label for="mail">EMAIL</label>
@@ -52,7 +61,9 @@
           </ul>
         </form>
         <section class="bottom">
-          <button type="submit" class="btn">Create Account</button>
+          <button type="submit" class="btn" form="myForm">
+            Create Account
+          </button>
           <p>Already have an account? <a href="#">Log In!</a></p>
         </section>
       </section>
